# fast-movie-dl

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: auth.rs  cli.rs  config.rs  doctor.rs  errors.rs  main.rs  planner.rs  probe.rs  remote.rs  runner.rs  tui.rs
