[package]
name = "fast-movie-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
dialoguer = "0.11"
ftp = "3"
indicatif = "0.17"
keyring = "2"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
url = "2"
which = "6"

[dev-dependencies]
tempfile = "3"
